 * Fix support for uncompressed sound with gstreamer media handler.
 * Implement Button.getDepth(), fix button key events.
 * Fixes to startDrag and stopDrag opcodes.
 * Implement onSoundComplete() for event sounds.
 * Fix MovieClip.onLoad event dispatching and constant pools handling, fixing
   support for movies generated by the evil Adobe Captivate tool (#33521).

Gnash 0.8.9
2011/03/19

Caveats:

 * The minimum required FFmpeg version, for people who prefer it over
   Gstreamer, is now 51.28.0.
 * The configure script option --enable-i810-lod-bias, which provided
   a workaround for a very old driver for the Intel I810 when using the
   OpenGL renderer, has been removed.
 * Gnash now uses the system-installed libltdl rather than its in-tree
   copy.
 * NPAPI headers are now required for building the Mozilla plugin; they
   are normally part of the Xulrunner development package.

Improvements since 0.8.8 release are:

 * Fixed playback of uncommon MPEG4 streams when using GStreamer.
 * Avoid drawing operations when the window is obscured, including when
   Gnash is used as a plugin, starting with Firefox 4.0 (GTK GUI).
 * Support SWF with embedded ScreenVideo when using FFMPEG or
   gstreamer-ffmpeg >= 0.10.12.
 * Fix playback of SWF-embedded ADPCM audio when using Gstreamer.
 * Fix playback of SWF-embedded PCM audio when using FFMPEG.
 * Fix swapped _framesloaded and _totalframes properties.
 * Fixes for several crashes, with better automated testing of the
   entire ActionScript API for input sanitization.
 * Improved ActionScript performance processing, especially
   for interactive applications.
 * NPAPI plugin: fix relative urls resolution in presence of <base> tag
   and "base" parameter; improved robustness and compatibility with
   chromium browser. Avoid blocking the parent process.
 * Improved SWF8 support with BitmapData.draw, BitmapData.loadBitmap,
   and other bitmap functions.
 * Re-entrant core libraries.
 * RTMP remoting support.