@@ -16,6 +16,7 @@ Improvements since 0.8.9 release are:
  * Implement onSoundComplete() for event sounds.
  * Fix MovieClip.onLoad event dispatching and constant pools handling, fixing
    support for movies generated by the evil Adobe Captivate tool (#33521).
+ * Fix unattached Sound.stop() semantic (#33888) enjoy Super Mario!
 
 Gnash 0.8.9
 2011/03/19
